-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8212052 | 11.0.2 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
Reported by ralf.schmelter@sap.com:
The flag -XX:EpsilonTLABElasticity (epsilon_globals.hpp, line 77) expects a double value, but uses max_intx in the allowed range. This leads to a truncation warning in the Windows build. If the value should only be guaranteed to be >= 1, then DBL_MAX should have been used instead.
The flag -XX:EpsilonTLABElasticity (epsilon_globals.hpp, line 77) expects a double value, but uses max_intx in the allowed range. This leads to a truncation warning in the Windows build. If the value should only be guaranteed to be >= 1, then DBL_MAX should have been used instead.
- backported by
-
JDK-8212052 [epsilon] range function for EpsilonTLABElasticity causes compiler warning
-
- Resolved
-