8209942: [epsilon] range function for EpsilonTLABElasticity causes compiler warning

Reviewed-by: shade, simonis